TFP-6242 sanere ubrukt aksjonspunkt 5032